--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,12 @@ body {
     color: hsl(217, 12%, 63%);
 }
 
+.bg-secondary {
+    background-color: hsl(210, 19%, 18%) !important;
+    font-weight: lighter !important;
+    padding: 0.7rem;
+}
+
 .btn {
     background-color: hsl(25, 97%, 53%) !important;
     margin-top: 2rem;
@@ -83,4 +89,14 @@ body {
 
 .numbers-for-rating {
     margin-top: 2rem;
+}
+
+.thank-you-illustration {
+    max-width: fit-content;
+    padding-top: 3rem;
+}
+
+.ty-rating {
+    color: hsl(25, 97%, 53%) !important;
+    font-size: 15px !important;
 }
