--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="public/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="card rounded-5">
-                    <img src="public/images/illustration-thank-you.svg"
+                    <img src="/images/illustration-thank-you.svg"
                         class="card-img-top img-fluid thank-you-illustration mx-auto" alt="thank-you-illustration">
                     <div class="card-body text-center thank-you-text">
                         <p><span class="badge bg-secondary rounded-5 ty-rating">You selected <%= chosenRating %> out of
